@startuml
skinparam classAttributeIconSize 0

Advertisment <|-- PictureAd
Advertisment <|-- TextAd
Advertisment o- ItemResource
ItemResource <|.. Car
ItemResource <|.. Furniture

abstract class Advertisment{
    - ItemResource item
    + display(): void
}

class PictureAd{
    + display(): String
}

class TextAd{
    + display(): String
}

interface ItemResource {
    + providePicture(): String
    + provideTitle(): String
    + provideDescription(): String
    + providePrice(): String
}

class Car{
    - String picUrl
    - String make
    - String model
    - String[] features
    - int price
}

class Furniture{
    - String picUrl
    - String description
    - float price
}

@enduml